--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ h1 {
 
 h3 {
   margin: 0;
+  text-align: center;
 }
 
 table {
@@ -22,14 +23,15 @@ table {
 
 button {
   outline: none;
-  border-color: black;
+  border-color: #0d4c5d;
   border-style: solid;
   border-radius: 20px;
   width: 200px;
   height: 30px;
-  background-color: white;
+  background-color: #0d4c5d;
   font-size: 16px;
   font-weight: bold;
+  color: white;
   /* justify-content: right; */
 }
 
@@ -155,7 +157,7 @@ button:hover {
   /* border: 2px solid #11667c; */
   /* border-radius: 20px; */
   background-color: white;
-  margin-bottom: 10px;
+  margin-top: 10px;
   padding: 20px;
 }
 
