--- a/style.css
+++ b/style.css
@@ -203,11 +203,6 @@ button:hover {
   margin-top: 0;
 }
 
-.main-projects-container div {
-  /* border-radius: 20px; */
-  /* background-color: white; */
-}
-
 #projects {
   margin: 10px;
   padding: 20px;
@@ -237,6 +232,7 @@ button:hover {
 
 .project-button-container {
   text-align: center;
+  margin-top: 20px;
 }
 
 .project-button {
@@ -271,6 +267,7 @@ button:hover {
   .projects-container {
     display: flex;
     margin: 10px;
+    padding: 20px;
   }
 }
 
