changed profile pic and background color

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   /* background-color: #464545; */
-  background-color: #78d6ef;
+  background-color: #8ca0ea;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
   color: black;
