--- a/style.css
+++ b/style.css
@@ -6,6 +6,10 @@ body {
   color: black;
 }
 
+/* div {
+  border: 1px solid red;
+} */
+
 h1 {
   margin: 0px;
   margin-left: 10px;
@@ -101,8 +105,6 @@ button:hover {
 }
 
 .about-me {
-  /* border: 1px solid red; */
-  /* border-radius: 20px; */
   margin: 10px;
   padding: 20px;
 }
@@ -114,8 +116,6 @@ button:hover {
   flex: 1;
   display: flex;
   flex-direction: column;
-  /* border: 1px solid red; */
-  /* border-radius: 20px; */
 }
 
 .skill-heading-icon-container {
@@ -214,16 +214,15 @@ button:hover {
 }
 
 .project-list img {
-  max-width: 300px;
+  max-width: 275px;
   border-radius: 20px;
   /* border: 2px solid #11667c; */
   border: 2px solid black;
 }
 
 .project-description-container {
-  padding-left: 40px;
-  padding-right: 40px;
-  padding-top: 10px;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 .project-description {
