--- a/style.css
+++ b/style.css
@@ -1,14 +1,10 @@
 body {
   /* background-color: #464545; */
-  background-color: #8ca0ea;
+  background-color: lightgray;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
   color: black;
 }
-
-/* div {
-  border: 1px solid red;
-} */
 
 h1 {
   margin: 0px;
@@ -27,16 +23,19 @@ table {
 
 button {
   outline: none;
-  border-color: #0d4c5d;
+  border-color: #566573;
   border-style: solid;
   border-radius: 20px;
   width: 200px;
   height: 30px;
-  background-color: #0d4c5d;
+  background-color: #566573;
   font-size: 16px;
   font-weight: bold;
   color: white;
-  /* justify-content: right; */
+}
+
+.parent {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 button:hover {
@@ -155,10 +154,8 @@ button:hover {
 /*-----------------------------------------*/
 .graphic-design-container {
   flex: 1;
-  /* border: 2px solid #11667c; */
-  /* border-radius: 20px; */
   background-color: white;
-  margin-top: 10px;
+  margin-top: 15px;
   padding: 20px;
 }
 
@@ -184,8 +181,6 @@ button:hover {
   flex: 1;
   background-color: white;
   padding: 20px;
-  /* border-radius: 20px; */
-  /* border: 2px solid #11667c; */
 }
 
 #message {
@@ -195,12 +190,10 @@ button:hover {
 /*PROJECTS SECTION
 /*-----------------------------------------*/
 .main-projects-container {
-  margin: 10px;
-  /* border: 2px solid #11667c; */
-  /* border-radius: 20px; */
   background-color: white;
   margin: 50px;
   margin-top: 0;
+  padding-bottom: 10px;
 }
 
 #projects {
@@ -254,12 +247,12 @@ button:hover {
   .main-container {
     display: flex;
     margin: 50px;
-    margin-bottom: 10px;
+    margin-bottom: 15px;
   }
 
   .profile-container {
     flex: 1;
-    margin-right: 10px;
+    margin-right: 15px;
     background-color: white;
   }
 
@@ -273,11 +266,12 @@ button:hover {
 @media (max-width: 1070px) {
   .main-container {
     margin: 50px;
-    margin-bottom: 10px;
+    margin-bottom: 15px;
   }
 
   .profile-container {
     flex: 1;
     background-color: white;
+    margin-bottom: 15px;
   }
 }
