--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body {
   background-color: #1D1528;
   color: #FFFFFF;
   font-family: "Courier New", Courier, monospace;
+  overflow: hidden;
 }
 
 .main-container {
