--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ body {
   width: 200px;
 }
 
-.typed-text {
+#typed-text {
   font-size: 18px;
 }
 
@@ -246,4 +246,87 @@ body {
 @keyframes blink {
   0%, 100% { opacity: 1; }
   50% { opacity: 0; }
+}
+
+@media (max-width: 768px) {
+  .container-profile {
+    align-items: center;
+    display: flex;
+    gap: 5px;
+    justify-content: center;
+    flex-direction: column;
+  }
+
+  .profile-picture {
+    border-radius: 50%;
+    width: 150px;
+  }
+
+  .typing {
+    display: inline-block;
+    overflow: hidden;
+    white-space: pre-line;
+    width: 100%;
+    height: 65px;
+  }
+
+  .container-about-me {
+    display: flex;
+    flex-direction: column;
+    margin-top: 10px;
+    width: 100%;
+    align-items: center;
+  }
+
+  .container-about-me-content {
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+    max-height: 0;
+    opacity: 0;
+    transform: translateY(6px);
+    transition: max-height 1100ms ease-in-out, opacity 800ms ease-in-out, transform 800ms ease-in-out;
+    width: 100%;
+  }
+
+
+  .container-technologies {
+    display: flex;
+    gap: 20px;
+    margin-top: 10px;
+    justify-content: center;
+  }
+
+  .card-project {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    margin-top: 10px;
+  }
+
+  .card-content {
+    display: flex;
+    flex-direction: column;
+    width: 200px;
+  }
+
+  .card-description {
+    display: flex;
+    font-size: 12px;
+  }
+
+  .card-image {
+    border-radius: 20px;
+    cursor: pointer;
+    width: 150px;
+  }
+
+  #typed-text {
+    font-size: 16px;
+  }
+
+  p {
+    margin: 5px;
+  }
 }
