--- a/style.css
+++ b/style.css
@@ -181,12 +181,19 @@ html, body {
   max-height: 60vh;
   opacity: 1;
   transform: translateY(0);
-  overflow-y: auto;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
 }
 
 .container-about-me-content.is-open.is-opening,
 .container-projects-content.is-open.is-opening {
   overflow-y: hidden;
+}
+
+.container-projects {
+  height: 100vh;
+  overflow-y: auto;
 }
 
 .card-project {
@@ -342,7 +349,9 @@ html, body {
 
   .container-projects-content.is-open {
     max-height: 60vh;
-    overflow-y: auto;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
   }
 
   .container-about-me-content.is-open.is-opening,
@@ -362,7 +371,7 @@ html, body {
     align-items: center;
     justify-content: center;
     gap: 10px;
-    margin-top: 5px;
+    margin-top: 10px;
   }
 
   .card-content {
